Fix logo positioning on Firefox.

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -31,9 +31,9 @@
 .logo {
     padding-bottom: 5px;
     padding-left: 20px;
-    height: 12%;
+    /* height: 200px; */
     max-height: 75px;
-    position: fixed;
+    position: absolute;
     aspect-ratio: auto;
 }
 
